--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_componentes-grandes/historico/CSS/botoessolicitacoesgestor.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_componentes-grandes/historico/CSS/botoessolicitacoesgestor.module.css
@@ -35,7 +35,7 @@
   overflow: hidden;
 }
 
-.botao::before {
+/* .botao::before {
   content: '';
   position: absolute;
   top: 0;
@@ -44,7 +44,7 @@
   height: 100%;
   background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
   transition: left 0.5s ease;
-}
+} */
 
 .botao:hover {
   transform: translateY(-2px);
