--- a/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t01_header.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t01_header.module.css
@@ -3,14 +3,20 @@
 /* 3. Adicione CSS para visualizar melhor:
 css */
 /* header.module.css */
+.containerHeader{
+    position: relative;
+    height: 100px;
+}
 .header {
     display: flex;
+    position: fixed;
     align-items: center;
     justify-content: space-evenly;
     padding: 1rem;
     background-color: #f8f9fa;
     border-bottom: 2px solid #ddd;
     width: 100vw;
+    z-index: 999;
 }
 
 .header img {
