--- a/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t11_sugestao.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/site_do_sistema/components_site/t11_sugestao.module.css
@@ -54,7 +54,7 @@
     gap: 30px;
     margin: 20px 0;
     padding: 20px;
-    background: var(--corbranco60); /* #FFFFFF */
+    background: var(--corazul); /* #18203D */
 }
 
 .imagemPacotes {
