--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t03_repertorio.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t03_repertorio.module.css
@@ -1,3 +1,13 @@
+.main label {
+    display: block;
+}
+
+.main > div:nth-child(2) {
+    margin-left: 20px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.505);
+    padding: 5px;
+}
+
 .eventosContainer {
     display: flex;
     flex-direction: column;
@@ -65,3 +75,4 @@
 .footerImg{
     width: 100vw;
 }
+
