--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="dark_blue">#18203D</color>
+    <color name="gold">#DB9D12</color>
+    <color name="dark_gray">#1E1E1E</color>
+    <color name="blue">#196DBA</color>
 </resources>
