Login enfim concluído e funcional! - login funcional (com botão rápido de testes - para facilitar); - correções de chamada da API com funções async e await; - correção de erro ao puxar dados de tabelas independentes (principalmente a de pacotes de serviço); - cadastro de músicos e solicitações do cliente melhorados; - melhor ajuste visual de códigos antigos (identação e remoção de código inútil); - correção de nomenclatura em arquivos css; - adição de extensões faltantes (.jsx/.js).

--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-geral/CSS/t01_login.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-geral/CSS/t01_login.module.css
@@ -55,6 +55,15 @@
 =======
 } */ 
 
+.ignorarLogin {
+    position: fixed;
+    top: 0;
+} .ignorarLogin:hover {
+    background-color: red;
+    color: white;
+    cursor: pointer;
+}
+
 .main {
     position: absolute;
     max-width: 400px;
