Ajustes no css realizados nas telas de orçamento do cliente para melhor fluidez!

--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_componentes-grandes/CSS/partesevento.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_componentes-grandes/CSS/partesevento.module.css
@@ -6,6 +6,7 @@
     background: white;
 }
 
+
 .eventoHeader {
     margin-bottom: 20px;
     text-align: center;
@@ -82,6 +83,13 @@
 
 .musicasLista {
     margin-top: 15px;
+}
+
+.musicasLista select {
+    /* background-color: black; */
+    padding: 10px;
+    border-radius: 10px;
+
 }
 
 .musicasLista h4 {
