--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t02_orcamento.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t02_orcamento.module.css
@@ -6,6 +6,8 @@
 
 .main > form {
     margin-top: 10px;
+    width: 70%;
+    margin: auto;
 }
 
 /* LEGENDAS */
@@ -18,6 +20,24 @@
     color: var(--corbranco60);
 }
 
+/* FIELDSETS */
+.main fieldset {
+    background-color: var(--corbranco60);
+    display: flex;
+    flex-flow: row wrap;
+    gap: 15px;
+
+    border-radius: 12px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 2px solid var(--corespaco30);
+}
+/* CONTAINERS DOS CAMPOS */
+.main fieldset > div {
+    flex: 1 0 250px;
+    min-width: 0;
+}
+
 /* LABELS */
 .main label {
     display: block;
@@ -25,6 +45,21 @@
     font-weight: 600;
     font-size: 0.95rem;
     color: var(--corpreto);
+}
+
+/* BOTÃO PRÓXIMA TELA */
+.main form > div {
+    background-color: var(--cordourado10);
+    border-radius: 10px;
+    border: 1px solid black;
+    font-size: large;
+
+    margin-left: auto;
+    padding: 10px;
+    font-weight: bold;
+
+} .main form > div:hover {
+    color: white;
 }
 
 /* INPUTS E SELECTS */
@@ -48,32 +83,14 @@
     box-shadow: 0 0 5px rgba(219, 157, 18, 0.3);
 }
 
-/* FIELDSETS */
-.main fieldset {
-    background-color: var(--corbranco60);
-    display: flex;
-    flex-flow: row wrap;
-    gap: 15px;
-    border-radius: 12px;
-    width: 90%;
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 2px solid var(--corespaco30);
-}
 
-/* CONTAINERS DOS CAMPOS */
-.main fieldset > div {
-    flex: 1 0 250px;
-    min-width: 0;
-}
 
 /* SEÇÃO ULTIMO (TIPO LOCAL + COMPLEMENTO) */
 .ultimo {
     display: flex;
     flex-flow: row wrap;
     gap: 15px;
-    width: 100%;
+    /* width: 100%; */
     margin-top: 10px;
 }
 
@@ -85,14 +102,7 @@
     flex: 2 0 250px;
 }
 
-/* BOTÃO PRÓXIMA */
-.botaoContainer {
-    display: flex;
-    justify-content: center;
-    margin: 30px auto;
-    width: 90%;
-    max-width: 1200px;
-}
+
 
 /* FOOTER */
 .footerImagem {
