--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t03_repertorio.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-cliente/_telas-principais/CSS/t03_repertorio.module.css
@@ -8,25 +8,13 @@
     padding: 5px;
 }
 
-.eventosContainer {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    margin: 20px 0;
-    padding: 20px;
-}
-
-.imagemPacotes {
-    width: 100%;
-    margin: 10px 0;
-}
 
 .tituloContainer {
     text-align: center;
     padding: 50px 20px;
     background: var(--corazul); /* #18203D */
     color: var(--corbranco60); /* #FFFFFF */
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     position: relative;
     overflow: hidden;
 }
@@ -62,9 +50,9 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    margin: 20px 0;
     padding: 20px;
     background: var(--corbranco60); /* #FFFFFF */
+    /* background-color: var(--cordourado10); */
 }
 
 .imagemPacotes {
@@ -72,7 +60,38 @@
     margin: 10px 0;
 }
 
+
 .footerImg{
     width: 100vw;
 }
 
+
+
+/* BOTÃO PRÓXIMA TELA */
+.main > div > div:nth-last-child(1) {
+    background-color: var(--cordourado10);
+    border-radius: 10px;
+    border: 1px solid black;
+    font-size: large;
+    font-weight: bold;
+
+    margin-left: auto;
+    padding: 10px;
+} .main > div > div:nth-last-child(1):hover {
+    color: white;
+}
+
+/* SELECTS */
+.main > div:nth-child(2) {
+    font-size: large;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.37);
+    width: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+
+} .main > div:nth-child(2) select {
+    border-radius: 10px;
+    padding: 5px;
+    background-color: var(--cordourado10);
+    font-weight: bold;
+}
