--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
@@ -104,7 +104,7 @@ input[type="radio"]:checked + label div {
     display: flex;
     flex-flow: row wrap;
 
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 
     gap: 10px;
@@ -113,7 +113,7 @@ input[type="radio"]:checked + label div {
 }
 
 .seletorTabelas label > div {
-    width: 250px;
+    width: 260px;
     padding: 12px;
     text-align: center;
     border-radius: 10px;
