--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-musico/CSS/t02_cadastroinstrumentos.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-musico/CSS/t02_cadastroinstrumentos.module.css
@@ -16,8 +16,8 @@
     font-size: 1.8rem;
     font-weight: 700;
     text-align: center;
-    color: var(--corazul);
-    text-shadow: 2px 0px 2px var(--cordourado10);
+    color: white;
+    text-shadow: 2px 0px 2px black;
     margin-bottom: 1.8rem;
 }
 
@@ -27,7 +27,7 @@
     gap: 1.2rem;
 }
 
-.label {
+.formGrid label {
     font-weight: 600;
     color: white;
     margin-bottom: 6px;
@@ -38,13 +38,14 @@
     color: #667;
 }
 
-.input {
+.formGrid input, .formGrid select {
     width: 100%;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 0.6rem 0.8rem;
     font-size: 0.95rem;
     transition: all 0.2s ease;
+    background-color: white;
 }
 
 .input:focus {
