--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t03_solicitacoesServico.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t03_solicitacoesServico.module.css
@@ -34,6 +34,18 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.custo, .musicos {
+  margin-top: 20px;
+  font-size: large;
+  font-weight: 500;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--corazul);
+} 
+.custo > div, .musicos > div {
+  margin: 10px;
+}
+
+
 .dashboardContainer {
   max-width: 1200px;
   margin: 0 auto;
@@ -296,8 +308,8 @@
 
 .statusPendente {
   background-color: rgba(219, 157, 18, 0.1);
-  color: var(--cordourado10);
-  border-color: var(--cordourado10);
+  color: red;
+  border-color: red;
 }
 
 .statusAndamento {
@@ -306,10 +318,28 @@
   border-color: var(--corazul);
 }
 
+.statusAprovacao {
+  background-color: rgba(34, 197, 94, 0.1);
+  color: var(--cordourado10);
+  border-color: var(--cordourado10);
+}
+
+.statusMarcado {
+  background-color: rgba(34, 197, 94, 0.1);
+  color: #16a34a;
+  border-color: #16a34a;
+}
+
 .statusConcluido {
   background-color: rgba(34, 197, 94, 0.1);
   color: #16a34a;
   border-color: #16a34a;
+}
+
+.statusCancelado {
+  background-color: rgba(34, 197, 94, 0.1);
+  color: red;
+  border-color: red;
 }
 
 .cardContent {
