--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-gestor/_telas-principais/CSS/t04_bancoDeDados.module.css
@@ -193,6 +193,10 @@ input[type="radio"]:checked + label div {
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+} .inputGestor > div:nth-child(1) {
+    display: flex;
+    flex-flow: row-reverse;
 }
 
 .inputGestor fieldset {
@@ -230,4 +234,5 @@ input[type="radio"]:checked + label div {
     text-indent: 9px;
     border-radius: 10px;
     width: 300px;
+    padding: 5px;
 }
