--- a/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-musico/CSS/t01_painelAgendamentos.module.css
+++ b/frontend/sigsmu-tg2-frontend/src/pages_containers/telas-do-musico/CSS/t01_painelAgendamentos.module.css
@@ -40,8 +40,9 @@
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(25, 109, 186, 0.1);
   padding: 24px;
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
   border: 2px solid var(--corazul);
+  /* width: fit-content; */
 
 } .filtersContainer > span {
   color: white;
@@ -50,7 +51,9 @@
 }
 
 .filtersGrid {
-  display: grid;
+  display: flex;
+  justify-content: space-between;
+  
   grid-template-columns: 1fr;
   gap: 20px;
 }
@@ -62,8 +65,9 @@
 }
 
 .filterGroup {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
+  flex: 1 1 10px
 }
 
 .main label {
@@ -123,12 +127,20 @@
   box-shadow: 0 4px 8px rgba(219, 157, 18, 0.3);
 }
 
+.statCard {
+  width: 250px;
+}
+
 .statsGrid {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-flow: row nowrap;
   gap: 20px;
   margin-bottom: 24px;
+
+} .statsGrid > div:nth-last-child(1) {
+  flex: 1 1 200px;
 }
+
 
 @media (min-width: 768px) {
   .statsGrid {
